[package]
name = "jpegs"
version = "0.1.0"
authors = ["Skyler van Boheemen"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
jpeg-encoder = "0.0.2"
jpeg-decoder = "0.1.22"